--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="content-security-policy" content=""><link rel="preconnect" href="https://fonts.googleapis.com" data-svelte="svelte-l3vchd"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous" data-svelte="svelte-l3vchd"><link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet" data-svelte="svelte-l3vchd">
+		<meta http-equiv="content-security-policy" content=""><title>Indigo Development | Home</title><link rel="preconnect" href="https://fonts.googleapis.com" data-svelte="svelte-l3vchd"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous" data-svelte="svelte-l3vchd"><link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet" data-svelte="svelte-l3vchd"><meta name="description" content="Welcome to Indigo Development. Creators of Rockwall and beautiful frontends" data-svelte="svelte-18bqias">
 	<link href="/_app/immutable/assets/__layout-5da1899d.css" rel="stylesheet">
-	<link rel="modulepreload" href="/_app/immutable/start-d4084658.js">
+	<link rel="modulepreload" href="/_app/immutable/start-c711404f.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-67a3932e.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-68fae9ca.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/singletons-eca981c1.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-f0d58483.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-eac3d25d.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/stores-ccec34d3.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/index.svelte-f633bf34.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/index.svelte-d13c6efa.js">
 	</head>
 	<body>
 		<div>
@@ -23,11 +23,13 @@
 <div id="top"></div>
 
 
-<nav class="p-4 w-full fixed text-neutral-500 font-mono transition-colors"><ul class="flex flex-col sm:flex-row items-center justify-between"><img src="indigo.svg" alt="Indigo logo" class="h-9 cursor-pointer">
-        <div class="w-full md:w-1/2 lg:w-1/3 xl:w-1/5 flex flex-col sm:flex-row items-center justify-between"><a href="/#projects" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">Projects</a>
-            <a href="http://" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">About</a>
-            <a href="http://" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">Contact</a></div>
-        <div class="w-36"></div></ul></nav>
+<nav class="p-4 w-full fixed text-neutral-500 font-mono transition-colors"><ul class="flex flex-col sm:flex-row items-center justify-between"><li><img src="indigo.svg" alt="Indigo logo" class="h-9 cursor-pointer"></li>
+        <li><div class="w-full md:w-1/2 lg:w-1/3 xl:w-1/5 flex flex-col sm:flex-row items-center justify-between"><a href="/#projects" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">Projects</a>
+                <a href="/" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">About</a>
+                <a href="/" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">Contact</a></div></li>
+        <li><div class="w-36"></div></li></ul></nav>
+
+
 
 
 <main><section class="flex items-center justify-center w-full h-[72rem] md:h-screen p-6 transition-all duration-500 bg-neutral-200"><div><p class="text-7xl md:text-8xl lg:text-9xl font-mono font-bold text-indigo-600 transition-colors pb-6 select-none">H<span class="animate-blink">_</span></p>
@@ -64,13 +66,13 @@
                 <img src="instagram.svg" alt="Instagram logo" class="select-none h-7 mt-6"></a></div></div></footer>
 
 
-		<script type="module" data-sveltekit-hydrate="109o5jw">
-		import { set_public_env, start } from "/_app/immutable/start-d4084658.js";
+		<script type="module" data-sveltekit-hydrate="18xjdtf">
+		import { set_public_env, start } from "/_app/immutable/start-c711404f.js";
 
 		set_public_env({});
 
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="109o5jw"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="18xjdtf"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
