--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content=""><title>Indigo Development | Home</title><link rel="preconnect" href="https://fonts.googleapis.com" data-svelte="svelte-l3vchd"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous" data-svelte="svelte-l3vchd"><link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet" data-svelte="svelte-l3vchd"><meta name="description" content="Welcome to Indigo Development. Creators of Rockwall and beautiful frontends" data-svelte="svelte-18bqias">
 	<link href="/_app/immutable/assets/__layout-5da1899d.css" rel="stylesheet">
-	<link rel="modulepreload" href="/_app/immutable/start-c711404f.js">
+	<link rel="modulepreload" href="/_app/immutable/start-4672c343.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-67a3932e.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-68fae9ca.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/singletons-eca981c1.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-eac3d25d.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-2ad24579.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/stores-ccec34d3.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/index.svelte-d13c6efa.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/index.svelte-09db8ad8.js">
 	</head>
 	<body>
 		<div>
@@ -23,10 +26,10 @@
 <div id="top"></div>
 
 
-<nav class="p-4 w-full fixed text-neutral-500 font-mono transition-colors"><ul class="flex flex-col sm:flex-row items-center justify-between"><li><img src="indigo.svg" alt="Indigo logo" class="h-9 cursor-pointer"></li>
-        <li><div class="w-full md:w-1/2 lg:w-1/3 xl:w-1/5 flex flex-col sm:flex-row items-center justify-between"><a href="/#projects" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">Projects</a>
-                <a href="/" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">About</a>
-                <a href="/" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">Contact</a></div></li>
+<nav class="p-4 w-full fixed text-neutral-500 font-mono transition-colors"><ul class="flex flex-col sm:flex-row items-center justify-between"><li><img src="icons/indigo.svg" alt="Indigo logo" class="h-9 cursor-pointer"></li>
+        <li class="w-full md:w-1/2 lg:w-1/3 xl:w-1/5 flex flex-col sm:flex-row items-center justify-between"><a href="/#projects" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">Projects</a>
+            <a href="/" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">About</a>
+            <a href="/" class="nav-link text-neutral-600 hover:text-white hover:bg-indigo-600">Contact</a></li>
         <li><div class="w-36"></div></li></ul></nav>
 
 
@@ -40,16 +43,16 @@
             </p></div>
 
         <div class="grid grid-cols-4 grid-rows-6 gap-3 transition-all duration-500 bg-neutral-200">
-            <img src="hill-rockslide.svg" alt="Hill Rockslide by Font Awesome 6" class="invert select-none h-full p-8 self-center justify-self-center">
+            <img src="icons/hill-rockslide.svg" alt="Hill Rockslide by Font Awesome 6" class="invert select-none h-full p-8 self-center justify-self-center">
             <div id="projects" class="col-span-2 xl:col-span-1 scroll-m-96"><h4 class="text-neutral-200 font-bold text-4xl mb-4">Rockwall</h4>
                 <p class="text-neutral-200 font-light text-lg text-opacity-60">Rockwall is a highly configurable, feature-rich chat Bukkit plugin. Rockwall has
                     features some similar chat plugins do not such as parties, @ mentions or emojis
                     like :shrug:
                 </p>
                 <div class="flex items-center justify-between w-20"><a href="https://github.com/1ndiigo/Rockwall">
-                        <img src="github.svg" alt="GitHub logo" class="invert select-none h-7 mt-6"></a>
+                        <img src="icons/github.svg" alt="GitHub logo" class="invert select-none h-7 mt-6"></a>
                     <a href="https://www.spigotmc.org/resources/rockwall.103709/">
-                        <img src="spigot.svg" alt="Leaky spigot" class="invert select-none h-7 mt-6"></a></div></div>
+                        <img src="icons/spigot.svg" alt="Leaky spigot" class="invert select-none h-7 mt-6"></a></div></div>
             <div class="col-span-2"></div>
             <div class="col-span-4"></div>
             
@@ -57,22 +60,22 @@
     
 
 <p class="font-mono text-white transition-all bottom-0 fixed w-full text-center mb-16 select-none opacity-0">Go to top</p></main>
-<footer><div class="h-64 bg-neutral-200 flex items-center justify-evenly"><img src="indigo.svg" alt="Indigo logo" class="h-9 cursor-pointer">
+<footer><div class="h-64 bg-neutral-200 flex items-center justify-evenly"><img src="icons/indigo.svg" alt="Indigo logo" class="h-9 cursor-pointer">
         <div class="w-1/12 flex flex-col sm:flex-row items-center justify-between"><a href="https://github.com/1ndiigo/">
-                <img src="github.svg" alt="GitHub logo" class="select-none h-7 mt-6"></a>
+                <img src="icons/github.svg" alt="GitHub logo" class="select-none h-7 mt-6"></a>
             <a href="https://discord.com/3znQkj837T">
-                <img src="discord.svg" alt="Discord logo" class="select-none h-7 mt-6"></a>
+                <img src="icons/discord.svg" alt="Discord logo" class="select-none h-7 mt-6"></a>
             <a href="https://instagram.com/geode.dev">
-                <img src="instagram.svg" alt="Instagram logo" class="select-none h-7 mt-6"></a></div></div></footer>
+                <img src="icons/instagram.svg" alt="Instagram logo" class="select-none h-7 mt-6"></a></div></div></footer>
 
 
-		<script type="module" data-sveltekit-hydrate="18xjdtf">
-		import { set_public_env, start } from "/_app/immutable/start-c711404f.js";
+		<script type="module" data-sveltekit-hydrate="1z0waak">
+		import { set_public_env, start } from "/_app/immutable/start-4672c343.js";
 
 		set_public_env({});
 
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="18xjdtf"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="1z0waak"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
