--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<link rel="manifest" href="/site.webmanifest">
+		<meta name="google" content="nositelinkssearchbox">
+		<meta name="googlebot" content="notranslate">
+		<meta name="google-site-verification" content="XcFZea0vbm4FUJIjX3GOBEXEcwqdBob-b3OwBD6g0bk">
 		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="content-security-policy" content=""><title>Indigo Development | Home</title><link rel="preconnect" href="https://fonts.googleapis.com" data-svelte="svelte-l3vchd"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous" data-svelte="svelte-l3vchd"><link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet" data-svelte="svelte-l3vchd"><meta name="description" content="Welcome to Indigo Development. Creators of Rockwall and beautiful frontends" data-svelte="svelte-1hswlai"><meta property="og:title" value="Indigo Development | Home" data-svelte="svelte-1hswlai"><meta property="og:image" value="indigo.png" data-svelte="svelte-1hswlai"><meta property="og:description" value="Welcome to Indigo Development. Creators of Rockwall and beautiful frontends" data-svelte="svelte-1hswlai"><meta property="og:url" value="https://1ndiigo.github.io" data-svelte="svelte-1hswlai">
+		<meta http-equiv="content-security-policy" content=""><title>Indigo Development | Home</title><link rel="preconnect" href="https://fonts.googleapis.com" data-svelte="svelte-l3vchd"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous" data-svelte="svelte-l3vchd"><link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet" data-svelte="svelte-l3vchd"><meta name="description" content="Welcome to Indigo Development. Creators of Rockwall and beautiful frontends" data-svelte="svelte-1njd4wi"><meta property="og:title" value="Indigo Development | Home" data-svelte="svelte-1njd4wi"><meta name="og:image" content="https://1ndiigo.github.io/indigo.png" data-svelte="svelte-1njd4wi"><meta property="og:description" value="Welcome to Indigo Development. Creators of Rockwall and beautiful frontends" data-svelte="svelte-1njd4wi"><meta property="og:url" value="https://1ndiigo.github.io" data-svelte="svelte-1njd4wi">
 	<link href="/_app/immutable/assets/__layout-5da1899d.css" rel="stylesheet">
-	<link rel="modulepreload" href="/_app/immutable/start-305b07db.js">
+	<link rel="modulepreload" href="/_app/immutable/start-10b1511b.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-67a3932e.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/index-68fae9ca.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/singletons-eca981c1.js">
 	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-2ad24579.js">
 	<link rel="modulepreload" href="/_app/immutable/chunks/stores-ccec34d3.js">
-	<link rel="modulepreload" href="/_app/immutable/pages/index.svelte-2df43a0a.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/index.svelte-7178c70a.js">
 	</head>
 	<body>
 		<div>
@@ -70,7 +73,7 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1z0waak">
-		import { set_public_env, start } from "/_app/immutable/start-305b07db.js";
+		import { set_public_env, start } from "/_app/immutable/start-10b1511b.js";
 
 		set_public_env({});
 
