--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,9 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<link rel="manifest" href="/site.webmanifest">
+		<meta name="google" content="nositelinkssearchbox">
+		<meta name="googlebot" content="notranslate">
+		<meta name="google-site-verification" content="XcFZea0vbm4FUJIjX3GOBEXEcwqdBob-b3OwBD6g0bk">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
