--- a/coming-soon.html
+++ b/coming-soon.html
@@ -2,18 +2,24 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<meta name="google" content="nositelinkssearchbox">
+		<meta name="googlebot" content="notranslate">
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-da9a1788.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-d8c28c5d.js">
+		<link rel="modulepreload" href="./_app/immutable/start-dc05a192.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-2129d253.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-60dec109.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-830f7074.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-718c3d57.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-f6355852.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-5f6996ca.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/coming-soon/_page.svelte-dd69ee36.js"><!-- HEAD_svelte-11oo1kl_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-11oo1kl_END -->
+		<link rel="modulepreload" href="./_app/immutable/components/pages/coming-soon/_page.svelte-0a676d0d.js"><title>Indigo Development | Coming soon!</title><!-- HEAD_svelte-1gvy7rh_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link async href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1gvy7rh_END --><!-- HEAD_svelte-2ubg9j_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
+			am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-2ubg9j_END -->
 	</head>
 	<body>
 		<div>
@@ -25,11 +31,13 @@
 
 
 
+
+
 <main class="bg-neutral-800"><section class="w-full h-screen flex items-center justify-center flex-col"><p class="text-white text-9xl font-medium">Coming soon!</p></section></main>
 
 
-		<script type="module" data-sveltekit-hydrate="1xqfzt6">
-			import { start } from "./_app/immutable/start-d8c28c5d.js";
+		<script type="module" data-sveltekit-hydrate="8wflfu">
+			import { start } from "./_app/immutable/start-dc05a192.js";
 
 			start({
 				env: {},
@@ -43,7 +51,7 @@
 					form: null
 				},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1xqfzt6"]').parentNode,
+				target: document.querySelector('[data-sveltekit-hydrate="8wflfu"]').parentNode,
 				trailing_slash: "never"
 			});
 		</script>
