--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-da9a1788.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-dc05a192.js">
+		<link rel="modulepreload" href="./_app/immutable/start-54413943.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-2129d253.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-718c3d57.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-f6355852.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-f4c9bac2.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-8b2c90d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-5f6996ca.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-425c9964.js"><title>Indigo Development | Home</title><!-- HEAD_svelte-1gvy7rh_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link async href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1gvy7rh_END --><!-- HEAD_svelte-4tkz45_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
-			am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-4tkz45_END -->
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-dbc82415.js"><title>Indigo Development | Home</title><!-- HEAD_svelte-1gvy7rh_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link async href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1gvy7rh_END --><!-- HEAD_svelte-19xl01w_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-19xl01w_END -->
 	</head>
 	<body>
 		<div>
+
+
 
 
 
@@ -38,8 +39,8 @@
 	<div class="py-32"></div></main>
 
 
-		<script type="module" data-sveltekit-hydrate="f22pn">
-			import { start } from "./_app/immutable/start-dc05a192.js";
+		<script type="module" data-sveltekit-hydrate="tb3ph7">
+			import { start } from "./_app/immutable/start-54413943.js";
 
 			start({
 				env: {},
@@ -53,7 +54,7 @@
 					form: null
 				},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="f22pn"]').parentNode,
+				target: document.querySelector('[data-sveltekit-hydrate="tb3ph7"]').parentNode,
 				trailing_slash: "never"
 			});
 		</script>
