--- a/coming-soon.html
+++ b/coming-soon.html
@@ -10,11 +10,11 @@
 		<meta name="googlebot" content="notranslate">
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-da9a1788.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-54413943.js">
+		<link href="./_app/immutable/assets/_layout-f298eced.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-e937ab71.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-2129d253.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-f4c9bac2.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-8b2c90d5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-ee32c75e.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-0794c85c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-5f6996ca.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
@@ -35,9 +35,14 @@
 
 <main class="bg-neutral-800"><section class="w-full h-screen flex items-center justify-center flex-col"><p class="text-white text-9xl font-medium">Coming soon!</p></section></main>
 
+<footer class="py-8 flex justify-evenly w-screen bg-neutral-800 border-t-2 border-neutral-700 items-center"><img src="indigo.svg" alt="indigo logo" class="h-10 md:h-12">
+    <div class="flex justify-evenly items-center w-1/3"><a href="https://instagram.com/geode.dev"><img src="instagram.svg" alt="instagram logo" class="h-6 md:h-8 invert"></a>
+        <a href="https://discord.gg/rEnxDz9P5m"><img src="discord.svg" alt="discord logo" class="h-6 md:h-8 invert"></a>
+        <a href="https://github.com/HoodieRocks"><img src="github.svg" alt="github logo" class="h-6 md:h-8 invert"></a></div></footer>
 
-		<script type="module" data-sveltekit-hydrate="8wflfu">
-			import { start } from "./_app/immutable/start-54413943.js";
+
+		<script type="module" data-sveltekit-hydrate="1mz0cw">
+			import { start } from "./_app/immutable/start-e937ab71.js";
 
 			start({
 				env: {},
@@ -51,7 +56,7 @@
 					form: null
 				},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="8wflfu"]').parentNode,
+				target: document.querySelector('[data-sveltekit-hydrate="1mz0cw"]').parentNode,
 				trailing_slash: "never"
 			});
 		</script>
