--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 		<meta name="googlebot" content="notranslate">
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-da9a1788.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-54413943.js">
+		<link href="./_app/immutable/assets/_layout-f298eced.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-e937ab71.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-2129d253.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-f4c9bac2.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-8b2c90d5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-ee32c75e.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-0794c85c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-5f6996ca.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-dbc82415.js"><title>Indigo Development | Home</title><!-- HEAD_svelte-1gvy7rh_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link async href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1gvy7rh_END --><!-- HEAD_svelte-19xl01w_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-19xl01w_END -->
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-9ac1c161.js"><title>Indigo Development | Home</title><!-- HEAD_svelte-1gvy7rh_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link async href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1gvy7rh_END --><!-- HEAD_svelte-19xl01w_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-19xl01w_END -->
 	</head>
 	<body>
 		<div>
@@ -32,15 +32,18 @@
 
 
 
-
-
 <main class="bg-neutral-800"><section class="w-full h-screen flex items-center justify-center flex-col"></section>
 	
-	<div class="py-32"></div></main>
+	<div class="py-96"></div></main>
+
+<footer class="py-8 flex justify-evenly w-screen bg-neutral-800 border-t-2 border-neutral-700 items-center"><img src="indigo.svg" alt="indigo logo" class="h-10 md:h-12">
+    <div class="flex justify-evenly items-center w-1/3"><a href="https://instagram.com/geode.dev"><img src="instagram.svg" alt="instagram logo" class="h-6 md:h-8 invert"></a>
+        <a href="https://discord.gg/rEnxDz9P5m"><img src="discord.svg" alt="discord logo" class="h-6 md:h-8 invert"></a>
+        <a href="https://github.com/HoodieRocks"><img src="github.svg" alt="github logo" class="h-6 md:h-8 invert"></a></div></footer>
 
 
-		<script type="module" data-sveltekit-hydrate="tb3ph7">
-			import { start } from "./_app/immutable/start-54413943.js";
+		<script type="module" data-sveltekit-hydrate="18ieb1r">
+			import { start } from "./_app/immutable/start-e937ab71.js";
 
 			start({
 				env: {},
@@ -54,7 +57,7 @@
 					form: null
 				},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="tb3ph7"]').parentNode,
+				target: document.querySelector('[data-sveltekit-hydrate="18ieb1r"]').parentNode,
 				trailing_slash: "never"
 			});
 		</script>
