--- a/coming-soon.html
+++ b/coming-soon.html
@@ -10,15 +10,16 @@
 		<meta name="googlebot" content="notranslate">
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-f298eced.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-e937ab71.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-2129d253.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-ee32c75e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-0794c85c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-5f6996ca.js">
+		<link href="./_app/immutable/assets/_layout-f309fd64.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-2ee3a0d9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-271e2ad1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-e8017ab4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-b21cceae.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-1184141f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-a3327757.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/coming-soon/_page.svelte-0a676d0d.js"><title>Indigo Development | Coming soon!</title><!-- HEAD_svelte-1gvy7rh_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link async href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1gvy7rh_END --><!-- HEAD_svelte-2ubg9j_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
+		<link rel="modulepreload" href="./_app/immutable/components/pages/coming-soon/_page.svelte-bb911588.js"><title>Indigo Development | Coming soon!</title><!-- HEAD_svelte-11oo1kl_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-11oo1kl_END --><!-- HEAD_svelte-2ubg9j_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
 			am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-2ubg9j_END -->
 	</head>
 	<body>
@@ -35,14 +36,11 @@
 
 <main class="bg-neutral-800"><section class="w-full h-screen flex items-center justify-center flex-col"><p class="text-white text-9xl font-medium">Coming soon!</p></section></main>
 
-<footer class="py-8 flex justify-evenly w-screen bg-neutral-800 border-t-2 border-neutral-700 items-center"><img src="indigo.svg" alt="indigo logo" class="h-10 md:h-12">
-    <div class="flex justify-evenly items-center w-1/3"><a href="https://instagram.com/geode.dev"><img src="instagram.svg" alt="instagram logo" class="h-6 md:h-8 invert"></a>
-        <a href="https://discord.gg/rEnxDz9P5m"><img src="discord.svg" alt="discord logo" class="h-6 md:h-8 invert"></a>
-        <a href="https://github.com/HoodieRocks"><img src="github.svg" alt="github logo" class="h-6 md:h-8 invert"></a></div></footer>
 
 
-		<script type="module" data-sveltekit-hydrate="1mz0cw">
-			import { start } from "./_app/immutable/start-e937ab71.js";
+
+		<script type="module" data-sveltekit-hydrate="1w3s62y">
+			import { start } from "./_app/immutable/start-2ee3a0d9.js";
 
 			start({
 				env: {},
@@ -56,7 +54,7 @@
 					form: null
 				},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1mz0cw"]').parentNode,
+				target: document.querySelector('[data-sveltekit-hydrate="1w3s62y"]').parentNode,
 				trailing_slash: "never"
 			});
 		</script>
