--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 		<meta name="googlebot" content="notranslate">
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-f309fd64.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-2ee3a0d9.js">
+		<link href="./_app/immutable/assets/_layout-66a16ea9.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-d5cfd7b1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-271e2ad1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-e8017ab4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-776b5c8b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-b21cceae.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-1184141f.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-ce411d5a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-a3327757.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-b48fe9b4.js"><title>Indigo Development | Home</title><!-- HEAD_svelte-11oo1kl_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-11oo1kl_END --><!-- HEAD_svelte-19xl01w_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-19xl01w_END -->
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-f98edb1b.js"><title>Indigo Development | Home</title><!-- HEAD_svelte-11oo1kl_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-11oo1kl_END --><!-- HEAD_svelte-19wkadz_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><meta property="og:title" content="Indigo Development | Home"><meta property="og:description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta property="og:image" content="https://hoodierocks.github.io/indigo.png"><meta property="og:url" content="https://hoodierocks.github.io/"><meta property="og:type" content="website"><!-- HEAD_svelte-19wkadz_END -->
 	</head>
 	<body>
 		<div>
@@ -41,7 +41,7 @@
 
 
 		<script type="module" data-sveltekit-hydrate="wkbmb9">
-			import { start } from "./_app/immutable/start-2ee3a0d9.js";
+			import { start } from "./_app/immutable/start-d5cfd7b1.js";
 
 			start({
 				env: {},
