--- a/coming-soon.html
+++ b/coming-soon.html
@@ -2,35 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
-		<meta name="google" content="nositelinkssearchbox">
-		<meta name="googlebot" content="notranslate">
+		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-66a16ea9.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-d5cfd7b1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-271e2ad1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-776b5c8b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-b21cceae.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-ce411d5a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-a3327757.js">
+		<link href="./_app/immutable/assets/_layout-ff16729c.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-7f31afe8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-94009d22.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-4847fb45.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-9b728935.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-82aa1edb.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/coming-soon/_page.svelte-bb911588.js"><title>Indigo Development | Coming soon!</title><!-- HEAD_svelte-11oo1kl_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-11oo1kl_END --><!-- HEAD_svelte-2ubg9j_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
+		<link rel="modulepreload" href="./_app/immutable/components/pages/coming-soon/_page.svelte-165a1b90.js"><title>Indigo Development | Coming soon!</title><!-- HEAD_svelte-1jhvysu_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1jhvysu_END --><!-- HEAD_svelte-2ubg9j_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
 			am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-2ubg9j_END -->
 	</head>
-	<body>
-		<div>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">
 
 
 
 
 
 
-
+<navigation></navigation>
 
 
 
@@ -39,8 +33,8 @@
 
 
 
-		<script type="module" data-sveltekit-hydrate="1w3s62y">
-			import { start } from "./_app/immutable/start-d5cfd7b1.js";
+		<script type="module" data-sveltekit-hydrate="1n5vrc5">
+			import { start } from "./_app/immutable/start-7f31afe8.js";
 
 			start({
 				env: {},
@@ -54,8 +48,8 @@
 					form: null
 				},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1w3s62y"]').parentNode,
-				trailing_slash: "never"
+				target: document.querySelector('[data-sveltekit-hydrate="1n5vrc5"]').parentNode,
+				version: "1669770424587"
 			});
 		</script>
 	</div>
