--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-ff16729c.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-7f31afe8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-94009d22.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-4847fb45.js">
+		<link rel="modulepreload" href="./_app/immutable/start-cf36f495.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-271e2ad1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-9b5edc28.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-9b728935.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-82aa1edb.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-cc3b3efe.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-a3327757.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-053bcad9.js"><title>Indigo Development | Home</title><!-- HEAD_svelte-1jhvysu_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1jhvysu_END --><!-- HEAD_svelte-19wkadz_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><meta property="og:title" content="Indigo Development | Home"><meta property="og:description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta property="og:image" content="https://hoodierocks.github.io/indigo.png"><meta property="og:url" content="https://hoodierocks.github.io/"><meta property="og:type" content="website"><!-- HEAD_svelte-19wkadz_END -->
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-18f1a938.js"><title>Indigo Development | Home</title><!-- HEAD_svelte-1jhvysu_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1jhvysu_END --><!-- HEAD_svelte-1n2i2wj_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><meta property="og:title" content="Indigo Development | Home"><meta property="og:description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta property="og:image" content="https://hoodierocks.github.io/indigo.png"><meta property="og:url" content="https://hoodierocks.github.io/"><meta property="og:type" content="website"><meta name="twitter:card" content="summary_large_image"><!-- HEAD_svelte-1n2i2wj_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -23,7 +24,11 @@
 
 
 
-<navigation></navigation>
+
+
+<nav class="w-full bg-white bg-opacity-5 fixed py-8 md:py-3 z-50 transition-all"><div class="flex justify-between items-center h-auto md:h-auto transition-all"><a href="/"><img src="indigo.svg" alt="Indigo logo" class="h-8 cursor-pointer" height="32" width="128"></a>
+		<div class="flex flex-col md:flex-row justify-between items-center w-2/5 mx-8"></div></div>
+	<p><img src="bars-solid.svg" alt="Bars" class="w-8 h-8 invert absolute top-[calc(50%-16px)] right-8"></p></nav>
 
 
 
@@ -34,8 +39,8 @@
 
 
 
-		<script type="module" data-sveltekit-hydrate="rzhvsq">
-			import { start } from "./_app/immutable/start-7f31afe8.js";
+		<script type="module" data-sveltekit-hydrate="7v7neg">
+			import { start } from "./_app/immutable/start-cf36f495.js";
 
 			start({
 				env: {},
@@ -49,8 +54,8 @@
 					form: null
 				},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="rzhvsq"]').parentNode,
-				version: "1669770424587"
+				target: document.querySelector('[data-sveltekit-hydrate="7v7neg"]').parentNode,
+				version: "1669926312310"
 			});
 		</script>
 	</div>
