--- a/coming-soon.html
+++ b/coming-soon.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-ff16729c.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-cf36f495.js">
+		<link rel="modulepreload" href="./_app/immutable/start-19c8ba2b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-271e2ad1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-9b5edc28.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-9b728935.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-cc3b3efe.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-1accd31a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-a3327757.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
@@ -27,10 +27,6 @@
 
 
 
-<nav class="w-full bg-white bg-opacity-5 fixed py-8 md:py-3 z-50 transition-all"><div class="flex justify-between items-center h-auto md:h-auto transition-all"><a href="/"><img src="indigo.svg" alt="Indigo logo" class="h-8 cursor-pointer" height="32" width="128"></a>
-		<div class="flex flex-col md:flex-row justify-between items-center w-2/5 mx-8"></div></div>
-	<p><img src="bars-solid.svg" alt="Bars" class="w-8 h-8 invert absolute top-[calc(50%-16px)] right-8"></p></nav>
-
 
 
 <main class="bg-neutral-800"><section class="w-full h-screen flex items-center justify-center flex-col"><p class="text-white text-9xl font-medium">Coming soon!</p></section></main>
@@ -38,8 +34,8 @@
 
 
 
-		<script type="module" data-sveltekit-hydrate="jmubif">
-			import { start } from "./_app/immutable/start-cf36f495.js";
+		<script type="module" data-sveltekit-hydrate="1w3s62y">
+			import { start } from "./_app/immutable/start-19c8ba2b.js";
 
 			start({
 				env: {},
@@ -53,8 +49,8 @@
 					form: null
 				},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="jmubif"]').parentNode,
-				version: "1669926312310"
+				target: document.querySelector('[data-sveltekit-hydrate="1w3s62y"]').parentNode,
+				version: "1669926405191"
 			});
 		</script>
 	</div>
