--- a/creations.html
+++ b/creations.html
@@ -14,7 +14,8 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-2f31f367.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-1cca0b37.js"><title>Indigo Development | Home</title><!-- HEAD_svelte-1jhvysu_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1jhvysu_END --><!-- HEAD_svelte-1n2i2wj_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><meta property="og:title" content="Indigo Development | Home"><meta property="og:description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I am a frontend developer designing beautiful and featureful UIs like this one."><meta property="og:image" content="https://hoodierocks.github.io/indigo.png"><meta property="og:url" content="https://hoodierocks.github.io/"><meta property="og:type" content="website"><meta name="twitter:card" content="summary_large_image"><!-- HEAD_svelte-1n2i2wj_END -->
+		<link rel="modulepreload" href="./_app/immutable/components/pages/creations/_page.svelte-d7be7d31.js"><title>Indigo Development | Coming soon!</title><!-- HEAD_svelte-1jhvysu_START --><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous"><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;900&display=swap" rel="stylesheet"><!-- HEAD_svelte-1jhvysu_END --><!-- HEAD_svelte-2ubg9j_START --><meta name="description" content="Hi, my name is Indigo. No that's not my real name, it's an alias, I also go by Cobblestone. I
+			am a frontend developer designing beautiful and featureful UIs like this one."><meta name="keywords" content="development dev indigo frontend developer"><!-- HEAD_svelte-2ubg9j_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -34,14 +35,12 @@
 
 
 
-<main class="bg-neutral-800"><section class="w-full h-screen flex items-center justify-center flex-col"></section>
-	
-	<div class="py-96"></div></main>
+<main class="bg-neutral-800"><section class="w-full h-screen flex items-center justify-center flex-col"><p class="text-white text-9xl font-medium">Coming soon!</p></section></main>
 
 
 
 
-		<script type="module" data-sveltekit-hydrate="1vvu4oh">
+		<script type="module" data-sveltekit-hydrate="7v1cem">
 			import { start } from "./_app/immutable/start-4a99a6fd.js";
 
 			start({
@@ -49,14 +48,14 @@
 				hydrate: {
 					status: 200,
 					error: null,
-					node_ids: [0, 2],
+					node_ids: [0, 4],
 					params: {},
-					route: {"id":"/"},
+					route: {"id":"/creations"},
 					data: [null,null],
 					form: null
 				},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1vvu4oh"]').parentNode,
+				target: document.querySelector('[data-sveltekit-hydrate="7v1cem"]').parentNode,
 				version: "1670089096945"
 			});
 		</script>
