where did the favicon go?

--- a/.svelte-kit/output/prerendered/pages/contact.html
+++ b/.svelte-kit/output/prerendered/pages/contact.html
@@ -3,14 +3,22 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+		<link rel="manifest" href="./site.webmanifest">
+		<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
+
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-95d71ebd.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-4a99a6fd.js">
+		<link rel="modulepreload" href="./_app/immutable/start-574d12cc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-1c56a37f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-827566c2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper-9b728935.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a39dadac.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-04feae9f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-2f31f367.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-1daba58d.js">
@@ -41,7 +49,7 @@
 
 
 		<script type="module" data-sveltekit-hydrate="7v1cem">
-			import { start } from "./_app/immutable/start-4a99a6fd.js";
+			import { start } from "./_app/immutable/start-574d12cc.js";
 
 			start({
 				env: {},
@@ -56,7 +64,7 @@
 				},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="7v1cem"]').parentNode,
-				version: "1670097294323"
+				version: "1670098480385"
 			});
 		</script>
 	</div>
